client/stylesheets/bootstrap_override.css
* {
    margin: 0;
}

* {
  border-radius: 0 !important;
  -moz-border-radius: 0 !important;
}
html, body {
    height: 100%;
}
.wrapper {
    min-height: 100%;
    height: auto !important;
    height: 100%;
    margin: 0 auto -70px; /* the bottom margin is the negative value of the footer's height */
    padding-bottom: 90px;
}
.footer, .push {
	background-color: #D5DADB;
    height: 70px; /* .push must be the same height as .footer */
    padding-top: 28px;
}

.navbar-default {
	background-color: #337AB7;
	border-radius: 0px;
	border: 0px;
}

.navbar .nav > li > a {
    color:  white;
}

.navbar .navbar-header > a {
	color: white;
}

.navbar-default .navbar-toggle .icon-bar {
	background-color: white;
}

#explore-bikes {
	/*overflow: auto;*/
}

#explore-bike-name {
	float: left;
	display: block;
	font-weight: bold;
	font-size: 20px;
}

#explore-bike-brand {
	/*float: left;*/
	display: block;
	font-size: 14px;
}

#explore-bike-thumb {
	float: left;
    clear:left;
    margin-right: 10px;
}

.clear {
	clear: both;
}

.bike-picture {
	margin-left: auto;
	margin-right: auto;
	/*border: 1px solid red;*/
}

.parts-list {
	margin-left: auto;
	margin-right: auto;
	height: 450px;
	/*border: 1px solid blue;*/
}

.part-input input {
	width: 100%;
	margin-top: 0px;
	padding-top: 0px;
	margin-bottom: 10x;
}

.input-group.share-link {
	padding-top: 20px;
	padding-bottom: 100px;
	/*border: 1px dotted black;*/
}

footer {
	padding-top: 100px;
}

#btn-bike-create {
	margin-top: 20px;
	font-size: 20px;
}

#btn-bike-edit {
	font-size: 20px;
	margin-left: 20px;
}

#btn-bike-submit {
	margin-top: 20px;
	font-size: 20px;
}

.bike-list {
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	/*border: 1px solid red;*/
}

.form-control.bike-name {
	margin-bottom: 15px;
}

#description {
	margin-top: 15px;
}

#num-stars {
	font-size: 15px;
}

#bike-featured {
	margin-top: 20px;
}

.label {
	dispaly: inline-block;
	margin-right: 10px;
}

.bike-list-name {
	overflow:hidden;
    /*white-space:nowrap;*/
    text-overflow:ellipsis;
    /*width:80%;*/
    /*display:block;*/
}

#btn-comment-edit {
	margin-top: 2px;
}

#dropzone {
	text-align: center;
}

#dropzone span.glyphicon-plus {
	font-size: 5em;
}

@media (max-width: 767px) {
    #description {
		margin-top: 0px;
		margin-bottom: 15px;
	}

    .bike-picture {
		margin-bottom: 15px;
	}


	#btn-bike-create {
		width: 100%;
	}

	#btn-bike-edit {
		width: 50%;
	}

	#btn-bike-submit {
		width: 100%;
	}

}

